Fixed footer with Privacy Policy and Terms of Use

--- a/index.html
+++ b/index.html
@@ -264,16 +264,27 @@
           <!-- Tasks from the backend will appear here -->
         </div>
 
+    </section>
+
+    <!-- footer -->
+    <footer style="text-align:center; margin-top:40px; padding:20px; font-size:14px; background:#f9f9f9;">
+      <p>
+        <a href="https://www.privacypolicies.com/live/ce1dc7b0-816e-46b6-8131-b75f04f0b060" target="_blank"
+          rel="noopener">
+          Privacy Policy
+        </a>
+        |
+        <a href="terms.html" target="_blank">Terms of Use</a>
+      </p>
+    </footer>
 
 
-
-
-        <!-- External scripts should remain here -->
-        <script
-          src="https://www.paypal.com/sdk/js?client-id=AemPV9RC7JRSZbDw3scGJR4f3JBOzLWj7v91am-HW6QS5FC9kNnU2eNPt1QtHa_lh5au6BWx5NCBiH_1&vault=true&intent=subscription"
-          data-sdk-integration-source="button-factory"></script>
-        <script id="paypal-button-container-P-1S098747NW7142306NCYJPSI"></script>
-        <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <!-- External scripts should remain here -->
+    <script
+      src="https://www.paypal.com/sdk/js?client-id=AemPV9RC7JRSZbDw3scGJR4f3JBOzLWj7v91am-HW6QS5FC9kNnU2eNPt1QtHa_lh5au6BWx5NCBiH_1&vault=true&intent=subscription"
+      data-sdk-integration-source="button-factory"></script>
+    <script id="paypal-button-container-P-1S098747NW7142306NCYJPSI"></script>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     </section>
     <!-- Move all inline scripts to just before </body> -->
     <script>
